# mvt-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: 0.vector.pbf  1.vector.pbf  6160.mvt  decode.rs  decode_with_commands.rs  decode_with_coordinates.rs  decode_with_json.rs
src/: decode.rs  decoded.rs  feature.rs  geometry_type.rs  layer.rs  lib.rs  tile.rs  tiles.rs  utils.rs  value.rs
tests/: decode_test.rs
