[package]
name = "rust_mvt"
version = "0.1.0"
authors = ["Aleksandr Ovchinnikov <aleksandr.ovchinnikov@mapbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.10.1"
protobuf-codegen = "2.10.1"

[build-dependencies]
protoc-rust = "2.0"