[package]
name = "mvt"
version = "0.1.0"
authors = ["Aleksandr Ovchinnikov <alexander.ovchinnikof@gmail.com>"]
edition = "2018"
description = "Library for decoding Mapbox Vector Tiles"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/mr1sunshine/mvt-rs"
keywords = ["mapbox", "vector", "tile"]
categories = ["decoding"]

[dependencies]
protobuf = "2.10.1"
protobuf-codegen = "2.10.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

[build-dependencies]
protoc-rust = "2.0"
git2 = "0.11"

[dev-dependencies]
glob = "0.3.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"